// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Counter Notification 1`] = `
<section>
  

  <button
    aria-label="Notifications"
    class="fd-button fd-button--transparent"
  >
    
    
    <i
      class="sap-icon--bell"
    />
    
    
    <span
      aria-label="Unread count"
      class="fd-counter fd-counter--notification"
    >
      1
    </span>
    

  </button>
  


  <button
    aria-label="Notifications"
    class="fd-button fd-button--transparent"
  >
    
    
    <i
      class="sap-icon--bell"
    />
    
    
    <span
      aria-label="Unread count"
      class="fd-counter fd-counter--notification"
    >
      20
    </span>
    

  </button>
  


  <button
    aria-label="Notifications"
    class="fd-button fd-button--transparent"
  >
    
    
    <i
      class="sap-icon--bell"
    />
    
    
    <span
      aria-label="Unread count"
      class="fd-counter fd-counter--notification"
    >
      300
    </span>
    

  </button>
  


  <button
    aria-label="Notifications"
    class="fd-button fd-button--transparent"
  >
    
    
    <i
      class="sap-icon--bell"
    />
    
    
    <span
      aria-label="Unread count"
      class="fd-counter fd-counter--notification"
    >
      999+
    </span>
    

  </button>
  

</section>
`;

exports[`Storyshots Components/Counter Standalone 1`] = `
<section>
  

  <span
    aria-label="Unread count"
    class="fd-counter"
  >
    5
  </span>
  

  <span
    aria-label="Unread count"
    class="fd-counter"
  >
    25
  </span>
  

  <span
    aria-label="Unread count"
    class="fd-counter"
  >
    101
  </span>
  

  <span
    aria-label="Unread count"
    class="fd-counter"
  >
    999+
  </span>
  

</section>
`;

exports[`Storyshots Components/Counter Tabs 1`] = `


`;

exports[`Storyshots Components/Counter Text 1`] = `


`;
